Fix: some uneven grid numbers caused squares to go out of bounds

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,4 @@
 body{
-  margin: 0;
-  padding 0;
   background: rgb(121,0,0);
   background: linear-gradient(90deg, rgba(121,0,0,1) 4%, rgba(255,0,0,1) 100%);
   font-family: monospace;
@@ -16,14 +14,13 @@ h1 {
   heigth: 100vh;
   margin: 0 auto;
   gap: 1rem;
-  padding: 2rem;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
 }
 .container{
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap:wrap;
   width: 960px;
   max-height: 960px;
   background-color: white;
